<resources>
    <string name="app_name">Go GulfCoast</string>
    <string name="get_started">Get Started</string>
    <string name="alert_icons">Alert Icon</string>
    <string name="done">Done</string>
    <string name="continue_text">Continue</string>
    <string name="addExtras">Add Extras</string>
    <string name="detail">Detail</string>
    <string name="my_cards">My Cards</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="empty" />
    <string name="confirmation">Confirmation</string>
    <string name="enter_number_to_receive_otp_code">Enter number to receive otp code</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_location">Enter Location</string>
    <string name="plan_trip">Plan trip</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="back">Back</string>
    <string name="enter_digit_otp">Enter 6 digit OTP code sent at </string>
    <string name="register">Register</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_pic">Upload picture to identify you</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="add_card">Add Card</string>
    <string name="card_number">Card Number</string>
    <string name="holder_name">Holder\'s Name</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="cvc">CVC</string>
    <string name="profile">Profile</string>
    <string name="test_name">Mr Karim Daoud</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="didn_t_receive_the_code">Didn\'t get code</string>
    <string name="expires_in_code">Expires in %1$s seconds</string>
    <string name="resendCode">Resend Code</string>
    <string name="total_booking">Total Bookings</string>
    <string name="next_booking">Next Booking</string>
    <string name="trip_preferences">Trip Preferences</string>
    <string name="driver">Driver</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="shortcut">Shortcut</string>
    <string name="manage_my_favorite">Manage My Favorite</string>
    <string name="atyour_service_">Welcome to Go Gulf Coast</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="ok">OK</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="go_to_next_screen">Go to next screen</string>
    <string name="menus">Menus</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="si">Shortcut Items</string>
    <string name="lorems">Lorem ipsum dolor sit amet, onsectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et doloremagna aliqua.</string>
    <string name="what_is_amheer">What is Amheer?</string>
    <string name="loremsHead">Lorem ipsum</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="logout_button">Logout Button</string>
    <string name="log_out">Log Out</string>
    <string name="please_select_the_topic_to_give_feedback_if_you_have_any_queries">Please select the topic to give a feedback, if you have any queries</string>
    <string name="choose_topic">Topic</string>
    <string name="invoices">Invoices</string>
    <string name="scheduledBooking">Scheduled Bookings</string>
    <string name="bookingHistory">Booking History</string>
    <string name="start">Start</string>
    <string name="master_card_image">Master card</string>
    <string name="pax_number_image">Pax Number</string>
    <string name="_selected_capacity">Select Capacity</string>
    <string name="verify">Verify</string>
    <string name="flight_info">Flight Info</string>
    <string name="departed">Departed</string>
    <string name="terminal">Terminal</string>
    <string name="_324568">312331</string>
    <string name="booking_id">Booking ID</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="vehicle_images">Vehicle Images</string>
    <string name="driver_name">Driver Name</string>
    <string name="cvv_cvv2">CVC</string>
    <string name="expiry_date">CARD EXPIRY</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="_active_card">Active</string>
    <string name="shortcut_images">Shortcut Images</string>
    <string name="sanepa_lalitpur_nepal">Lalitpur, Nepal</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="at_your_service">At your service </string>
    <string name="hello">Hello</string>
    <string name="select_start_destination">Start</string>
    <string name="destination">Destination</string>
    <string name="next">Next</string>
    <string name="totalInteger">%1$d</string>
    <string name="_11_20_am">11:20 am</string>
    <string name="time">Time</string>
    <string name="remove_return_date">Remove return date</string>
    <string name="return_date">Return Date</string>
    <string name="return_booking">Return Booking</string>
    <string name="now">Now</string>
    <string name="booking">Booking</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="select">Select</string>
    <string name="chooseVehicle">Choose vehicle</string>
    <string name="_7748_3_miles_2_hr_30_min">7748.3 miles | 2 hr 30 min</string>
    <string name="luxury_berline">Luxury Berline</string>
    <string name="eqs">EQS</string>
    <string name="mercedes_benz">Mercedes-Benz</string>
    <string name="_211_70">211,70 $</string>
    <string name="tva_inclusive">GST inclusive</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="car_images">Car Images</string>
    <string name="capacity">Capacity</string>
    <string name="extra_seats">Extra Seats</string>
    <string name="_flight_info">Flight Info</string>
    <string name="flight_no">Flight Number</string>
    <string name="booking_for_someone">Booking for someone else</string>
    <string name="lead_passenger">Lead Passenger</string>
    <string name="phone_number">Phone number</string>
    <string name="add_note">Add Note</string>
    <string name="payment">Payment</string>
    <string name="passenger">Passenger</string>
    <string name="luggage">Luggage</string>
    <string name="pets">Pet</string>
    <string name="wheelChair">Wheel Chair</string>
    <string name="journey_information">Journey Information</string>
    <string name="pickup_information">Pickup information</string>
    <string name="coverage">Coverage</string>
    <string name="write_a_message">Write a message</string>
    <string name="add_note_to_driver">Add Notes To  Driver</string>
    <string name="add_payment_card">Add Payment Card</string>
    <string name="_22_5_miles">22.5 miles</string>
    <string name="_2_hr_45_min">2 hr 45 min</string>
    <string name="startPoint">233 Airport Rd, Melbourne</string>
    <string name="endPoint">Sydney Opera, Sydney, Australia</string>
    <string name="startTime">Today, Thu, 23 Dec, 10:00 AM</string>
    <string name="returnTime">Today, Sun, 26 Dec, 12:00 AM</string>
    <string name="full_name_">Full Name</string>
    <string name="infant">Infant Seat $25</string>
    <string name="infantI">(approx 0 to 12 months)</string>
    <string name="child">Child Charge $25</string>
    <string name="childI">(approx 1 to 4 years)</string>
    <string name="booster">Booster Seat $25</string>
    <string name="boosterI">(approx 4 to 8 years)</string>
    <string name="skip">Skip</string>
    <string name="choose_ratings">Choose Ratings</string>
    <string name="write_a_review">Write a review</string>
    <string name="call_button">Call Button</string>
    <string name="message_button">Message Button</string>
    <string name="eqs_mercedes_benz">EQS|Mercedes-Benz</string>
    <string name="tva_incluse">GST include</string>
    <string name="requesting_driver">REQUESTING DRIVER</string>
    <string name="_cancel">Cancel</string>
    <string name="pickup_at">Pickup at</string>
    <string name="_14_jul_2022_11_17">14 Jul, 2022 11:17</string>
    <string name="_105">105</string>
    <string name="_2_17">2.17$</string>
    <string name="startLocation">Sanepa, lalitpur 44600, Nepal</string>
    <string name="endLocation">LaganKhel, Lalitpur,Nepal</string>
    <string name="_8_00">8.00 $</string>
    <string name="support">Support</string>
    <string name="delete_account">Delete Account</string>
    <string name="rating_icon">Rating ICON</string>
    <string name="average_daily_rate">Estimate fare</string>
    <string name="pickup_date_time">Pickup Date/Time</string>
    <string name="driver_note">Driver Note</string>
    <string name="extra_capacity">Extra Capacity</string>
    <string name="card">Card</string>
    <string name="notification_channel_id">fcm_default_notification</string>
    <string name="totalFareValue">$%.2f</string>
    <string name="displayInt">%1$d</string>
    <string name="displayPrice">$%1$s</string>
    <string name="base_fare">Base Fare</string>
    <string name="total_fare">Total Fare</string>
    <string name="dropoff_information">Dropoff Information</string>
    <string name="dropoff">Dropoff</string>
    <string name="pickup">Pick Up</string>
    <string name="preferred_vehicle">Preferred Vehicle</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_offer">Choose Your Offer (%)</string>
    <string name="_0">0%</string>
    <string name="slide_to_choose">Slide to choose</string>
    <string name="book_now">Book Now</string>
    <string name="navigationicon">NavigationIcon</string>
    <string name="pick_up_location">Pickup</string>
    <string name="notification">Notification</string>
    <string name="title">Title</string>
    <string name="map_key">AIzaSyAhvISUtWZZF1pmZMx6yHkstqJ0sU24SOY</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
</resources>