<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gsBackground"
        android:orientation="vertical"
        android:padding="@dimen/m_10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/yearPickerText"
                style="@style/textStyle18"
                android:layout_width="@dimen/m_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/m_10dp"
                android:fontFamily="@font/av_black_700"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/year"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/monthPickerText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/monthPickerText"
                style="@style/textStyle18"
                android:layout_width="@dimen/m_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/m_10dp"
                android:fontFamily="@font/av_black_700"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/month"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/yearPickerText"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_10dp">

            <NumberPicker
                android:id="@+id/yearPicker"
                android:layout_width="@dimen/m_0dp"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/m_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/monthPicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/monthPicker"
                android:layout_width="@dimen/m_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/m_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/yearPicker"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_1dp"
            android:layout_marginTop="@dimen/m_10dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/okButton"
            style="@style/textStyle16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/m_5dp"
            android:fontFamily="@font/av_black_700"
            android:gravity="center"
            android:paddingVertical="@dimen/m_5dp"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </LinearLayout>

</layout>