<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="toolbarViewModel"
            type="com.gogulf.passenger.app.ui.base.CommonViewModel" />
    </data>


    <LinearLayout
        android:id="@+id/mainContainer"
        android:background="@drawable/background_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            app:clicked="@{()-> toolbarViewModel.onValidated()}"
            app:done="@{@string/done}"
            app:onBackPressed="@{()-> toolbarViewModel.onBackPress()}"
            app:title="@{@string/enter_otp}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gsBackground"
            android:fillViewport="true">


            <LinearLayout
                android:id="@+id/bodyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_20dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/m_10dp">


                <TextView
                    android:id="@+id/userInformationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_5dp"
                    android:fontFamily="@font/av_regular_400"
                    android:text="@string/enter_digit_otp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_16sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/otpCodeCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/m_20dp"
                    android:minHeight="@dimen/m_50dp"
                    app:layout_constraintHeight_min="@dimen/m_50dp"
                    app:layout_constraintTop_toBottomOf="@id/userInformationText">

                    <com.gogulf.passenger.app.utils.customcomponents.PinView
                        android:id="@+id/otpCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/resendLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="@dimen/m_8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/resendLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        android:layout_marginVertical="@dimen/m_15dp">

                        <TextView
                            android:id="@+id/didntGetCode"
                            style="@style/textStyle16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_5dp"
                            android:text="@string/didn_t_receive_the_code"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/resendCode"
                            style="@style/textStyle16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_5dp"
                            android:text="@string/resendCode"
                            android:textColor="@color/primaryColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</layout>